--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   }
 .container {
   width: 100%;
-  max-width: 300px; /* باش مايكونش كبير بزاف على الشاشة */
+  max-width: 300px; /* saad/
   border-radius: 0; /* بلا زوايا مدورة */
   box-shadow: none; /* بلا shadow */
   margin: 0 auto;
@@ -74,7 +74,7 @@ a i {
   
 
   .container {
-    background: linear-gradient(45deg, #850523, #8505235d, #f6f6f6);
+    background: linear-gradient(45deg, #850523, #850523, #ffb7b7);
             background-size: 400% 400%;
     animation: gradientAnimation 5s ease-in-out infinite alternate;
     border-radius: 16px;
