--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ a i {
   
 
   .container {
-    background: linear-gradient(45deg, #850523, #850523, #ffb7b7);
+    background: linear-gradient(45deg, #af606d, #af606d, #af606d);
             background-size: 400% 400%;
     animation: gradientAnimation 5s ease-in-out infinite alternate;
     border-radius: 16px;
@@ -98,7 +98,7 @@ a i {
   .link {
     display: flex;
     align-items: center;
-    background: #dfc5cb70;
+    background: #fbf5e93b;
     margin: 10px 0;
     padding: 12px;
     border-radius: 8px;
@@ -121,7 +121,7 @@ a i {
   .footer {
     margin-top: 20px;
     font-size: 0.8em;
-    color: #ccc;
+    color: #000000;
   }
 </style>
 </head>
